# odlab

./: .gitignore  README  README.rst  requirements  setup.cfg  setup.py
doc/source/: conf.py
docs/: .buildinfo  Makefile  api.html  genindex.html  index.html  objects.inv  posterior.html  propagator.html  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: posterior.rst.txt  propagator.rst.txt
docs/_static/: bizstyle.js
docs/examples/: test_example.html
docs/source/: index.rst
docsrc/source/: api.rst  index.rst
examples/: .gitignore  chain_statistics.py  least_sq_posterior.py  maximize_posterior_gaussian_errors.py  mcmc_posterior.py  mcmc_posterior_gaussian_errors.py  mcmc_prior_update.py  observation_model.py  orekit_propagator.py  results_visualizing.py  simulate_radar_data.py  source_types.py  stuffs.py
examples/example_data/: track-1241145440-1001120300074-0_0.h5  track-1241145440-1001120300074-0_0.tdm  track-1241145440-1001120300074-0_1.h5  track-1241145440-1001120300074-0_1.tdm  track-1241145440-1001120300074-0_2.h5  track-1241145440-1001120300074-0_2.tdm
odlab/: __init__.py  misc.py  models.py  plot.py  profiling.py  propagator.py  sources.py  statistics.py  times.py
odlab/data/: hdf.py  oem.py  sources.py  tdm.py
odlab/instrument_models/: __init__.py  models.py  (+2 more)
pyod/: MCMC.py  __init__.py  ccsds.py  coordinates.py  datetime.py  misc.py  models.py  orbit_determination.py  plot.py  posterior.py  propagator.py  sources.py  tmp_template.py
tests/: test_ccsds.py  test_propagator_orekit.py  test_sources.py
(+452 files in other folders)
