[metadata]
name = odlab
description = Orbit Determination Laboratory
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Daniel Kastinen
author_email = daniel.kastinen@irf.se
license = MPL-2.0
license_files = LICENSE
readme = README.md
homepage = https://github.com/danielk333/odlab
classifiers = 
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Physics
    Operating System :: OS Independent
    License :: OSI Approved :: Mozilla Public License Version 2.0


[options]
packages = find: 
python_requires = >=3.0
install_requires =
    tqdm>=4.32.1
    scipy>=1.3.0
    numpy>=1.16.4
    matplotlib>=3.1.0
    sorts>=4.0



[options.extras_require]
develop = 
    pytest >= 6.2.5
    sphinx >= 4.2.0
    flake8 >= 4.0.1
    wheel >= 0.37.0
    build >= 0.7.0
    twine >= 3.4.2
    coverage >= 6.0.2
    sphinx-gallery >= 0.3.1
    matplotlib >= 3.5.1
    nbsphinx >= 0.8.8
    ipykernel >= 6.9.1
    radon >= 5.1.0


[flake8]
ignore = D203,E251,E126,E226,W291
max-line-length = 79
exclude = odlab/__pycache__,odlab/__init__.py